--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,8 @@
     <!--字体大小-->
     <dimen name="title_text_size">12sp</dimen>
     <dimen name="middle_text_size">12sp</dimen>
+    <dimen name="semi_middle_text_size">12sp</dimen>
+    <dimen name="semi_title_text_size">16sp</dimen>
 
 
     <!--看板的间隔距离-->
