--- a/app/src/main/res/drawable/green_shape.xml
+++ b/app/src/main/res/drawable/green_shape.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false">
-    <solid android:color="@color/holo_green_dark" />
+    <solid android:color="@color/machine_green" />
     <stroke
-        android:width="1dp"
+        android:width="2dp"
         android:color="@android:color/white" />
     <size
         android:width="@dimen/cicle_width"
