--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -20,6 +20,7 @@
 
     <!--table title text size-->
     <dimen name="title_text_size">22sp</dimen>
+    <dimen name="machine_padding_left">10dp</dimen>
     <dimen name="middle_text_size">22sp</dimen>
     <dimen name="semi_middle_text_size">20sp</dimen>
     <dimen name="semi_title_text_size">26sp</dimen>
