--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,10 @@
     <color name="bg_content_light">#ffffffff</color>
 
 
+    <color name="machine_yello">#fff29f0e</color>
+    <color name="machine_red">#fff03a3a</color>
+    <color name="machine_green">#ff5ac718</color>
+    <color name="machine_progress">#ff99d9ed</color>
+
+
 </resources>
