--- a/app/src/main/res/layout/activity_allmachine.xml
+++ b/app/src/main/res/layout/activity_allmachine.xml
@@ -25,7 +25,7 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:scrollbars="none" />
 
     <LinearLayout
         android:id="@+id/ll_bottom"
