--- a/app/src/main/res/layout/allmachine_line_item.xml
+++ b/app/src/main/res/layout/allmachine_line_item.xml
@@ -1,122 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:weightSum="9">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_00"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="9">
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/machine_true_number"
+        android:textColor="@color/title_dark"
+        android:textSize="@dimen/machine_content_size"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/split_table_title" />
+
+    <TextView
+        android:id="@+id/tv_01"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/machine_padding_left"
+        android:layout_weight="1"
+        android:drawablePadding="@dimen/machine_padding_text"
+        android:gravity="center_vertical"
+        android:text="@string/machine_status"
+        android:textColor="@color/title_dark"
+        android:textSize="@dimen/machine_content_size"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/split_table_title" />
+
+    <TextView
+        android:id="@+id/tv_02"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/machine_padding_left"
+        android:layout_weight="1"
+        android:drawablePadding="@dimen/machine_padding_text"
+        android:gravity="center_vertical"
+        android:text="@string/machine_quailty_out"
+        android:textColor="@color/title_dark"
+        android:textSize="@dimen/machine_content_size"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/split_table_title" />
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3"
+        android:orientation="horizontal">
+
+        <View
+            android:id="@+id/orderpercentview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
 
         <TextView
-            android:id="@+id/tv_00"
-            android:layout_width="0dp"
+            android:id="@+id/tv_machine_progress"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="@dimen/middle_text_size" />
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:gravity="bottom|center_horizontal"
+            android:text="@string/machine_percent"
+            android:textSize="@dimen/machine_percent_content" />
 
-        <TextView
-            android:id="@+id/tv_01"
-            android:layout_width="0dp"
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/iv_show_fresco"
+            android:layout_width="@dimen/logo_width"
+            android:layout_height="@dimen/logo_width"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
+            android:visibility="gone"
+            android:layout_marginLeft="@dimen/machine_padding_left"
+            fresco:failureImage="@color/default_img"
+            fresco:placeholderImage="@color/main_unclick" />
+
+        <com.android.tedcoder.material.view.MarqueeTextView
+            android:id="@+id/tv_03"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawablePadding="@dimen/machine_padding_left"
-            android:layout_weight="1"
-            android:background="@color/rawmaterial_dark"
-            android:gravity="center"
-            android:textSize="@dimen/middle_text_size" />
+            android:layout_marginLeft="@dimen/logo_margin_left"
+            android:layout_toRightOf="@id/iv_show_fresco"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="left|center_vertical"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:text="@string/machine_order"
+            android:textColor="@color/title_dark"
+            android:textSize="@dimen/machine_content_size"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_02"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:drawablePadding="@dimen/machine_padding_left"
-            android:gravity="center"
-            android:textSize="@dimen/middle_text_size" />
+    </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="3"
-            android:background="@android:color/white"
-            android:orientation="horizontal">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/split_table_title" />
 
-            <View
-                android:id="@+id/orderpercentview"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/tv_06"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/machine_order_number"
+        android:textColor="@color/title_dark"
+        android:textSize="@dimen/machine_content_size"
+        android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tv_machine_progress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/split_table_title" />
 
-            <com.facebook.drawee.view.SimpleDraweeView
-                android:id="@+id/iv_show_fresco"
-                android:layout_width="@dimen/logo_width"
-                android:layout_height="@dimen/logo_width"
-                android:layout_gravity="center_vertical"
-                android:visibility="invisible"
-                android:layout_centerVertical="true"
-                fresco:failureImage="@color/default_img"
-                fresco:placeholderImage="@color/main_unclick" />
+    <TextView
+        android:id="@+id/tv_07"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/machine_true_number"
+        android:textColor="@color/title_dark"
+        android:textSize="@dimen/machine_content_size"
+        android:textStyle="bold" />
 
-            <com.android.tedcoder.material.view.MarqueeTextView
-                android:id="@+id/tv_03"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/logo_margin_width"
-                android:ellipsize="marquee"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:gravity="left|center_vertical"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:text="logo : PO : CustPN : OrderPercent"
-                android:textSize="@dimen/middle_text_size"
-                android:textStyle="bold" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/split_table_title" />
 
-        </RelativeLayout>
+    <TextView
+        android:id="@+id/tv_08"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/machine_true_cometrue"
+        android:textColor="@color/title_dark"
+        android:textSize="@dimen/machine_content_size"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_06"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="@dimen/middle_text_size" />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/split_table_title" />
+</LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_07"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@color/rawmaterial_dark"
-            android:gravity="center"
-            android:textSize="@dimen/middle_text_size" />
-
-        <LinearLayout
-            android:id="@+id/ll_08"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_08"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="@dimen/middle_text_size" />
-        </LinearLayout>
-    </LinearLayout>
-
-</RelativeLayout>
 
 
