--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,12 +8,10 @@
     <dimen name="padding_small">2dp</dimen>
     <dimen name="padding_medium">4dp</dimen>
     <dimen name="padding_extra_large">48dp</dimen>
-
     <dimen name="cicle_width">20dp</dimen>
-
     <dimen name="logo_width">30dp</dimen>
     <dimen name="logo_margin_width">34dp</dimen>
-
+    <dimen name="logo_margin_left">4dp</dimen>
 
     <!--字体大小-->
     <dimen name="title_text_size">12sp</dimen>
@@ -21,26 +19,25 @@
     <dimen name="semi_middle_text_size">12sp</dimen>
     <dimen name="semi_title_text_size">12sp</dimen>
 
-
     <!--看板的间隔距离-->
     <dimen name="padding_left">10dp</dimen>
-    <dimen name="machine_padding_left">10dp</dimen>
+    <dimen name="machine_padding_left">4dp</dimen>
     <dimen name="text_padding_left">8dp</dimen>
     <dimen name="padding_right">10dp</dimen>
     <dimen name="notice_icon_margin_left">10dp</dimen>
-
-
     <dimen name="title_title_size">12sp</dimen>
-
-
     <dimen name="title_small_size">10sp</dimen>
     <dimen name="title_time_size">10sp</dimen>
     <dimen name="title_notice_size">12sp</dimen>
-
-
     <dimen name="big_text_size">16sp</dimen>
     <dimen name="cell_data_text_size">18sp</dimen>
     <dimen name="small_text_size">18sp</dimen>
+
+    <!--生产看板-->
+    <dimen name="machine_title_size">14sp</dimen>
+    <dimen name="machine_content_size">14sp</dimen>
+    <dimen name="machine_percent_content">8sp</dimen>
+    <dimen name="machine_padding_text">4sp</dimen>
 
 
 </resources>
