--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
         android:layout_marginTop="20dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:weightSum="1">
 
 
