--- a/app/src/main/res/layout/allmachine_line_item.xml
+++ b/app/src/main/res/layout/allmachine_line_item.xml
@@ -82,7 +82,8 @@
             android:layout_height="match_parent"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:gravity="bottom|center_horizontal"
+            android:gravity="bottom|right"
+            android:paddingRight="4dp"
             android:text="@string/machine_percent"
             android:textSize="@dimen/machine_percent_content" />
 
