--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="http://mes.seekersoft.cn/"
+        android:text="192.168.163.11:8077"
         android:textSize="14sp" />
 
     <EditText
