--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,24 +45,11 @@
         android:layout_marginTop="10dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
-        android:visibility="visible"
-        android:weightSum="3">
+        android:visibility="visible">
+
 
         <Button
-            android:id="@+id/btn_rawmaterial"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="4dp"
-            android:layout_weight="1"
-            android:background="@drawable/selector_orange"
-            android:text="原材料"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
-
-        <Button
-            android:id="@+id/btn_semimaterial"
+            android:id="@+id/btn_setting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -70,20 +57,7 @@
             android:layout_marginRight="4dp"
             android:layout_weight="1"
             android:background="@drawable/selector_orange"
-            android:text="半成品"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
-
-        <Button
-            android:id="@+id/btn_allmachine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_weight="1"
-            android:background="@drawable/selector_orange"
-            android:text="生产看板"
+            android:text="设 置"
             android:textColor="@android:color/white"
             android:textSize="14sp" />
 
